--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,4 +9,61 @@
 } */
 
  
+ /* section{
+  margin-top: 100px;
+ }
+  */
+.swiper-button-next::after,
+.swiper-button-prev::after {
+    font-family: swiper-icons;
+    font-size: 20px !important;
+    text-transform: none !important;
+    letter-spacing: 0;
+    font-variant: initial;
+    line-height: 1;
+    color: black;
+    background: lightgray;
+    padding: 10px;
+}
+
+
+/*
+source
+http://stackoverflow.com/a/23935891/3853728
+*/
+
+.img-gradient{
+  position:relative;
+  /* display:inline-block; */
+  width: -webkit-fill-available;
+}
+
+
+.img-gradient:after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+
+  /* Modern Browsers */
+  background: linear-gradient(to left, rgba(0,47,75,0.5) 0%, rgba(220, 66, 37, 0.5) 100%);
+
+  /* Vendor Prefixes */
+  background: -moz-linear-gradient(right, rgba(0,47,75,0.5) 0%, rgba(220, 66, 37, 0.5) 100%);
+  background: -webkit-gradient(linear, right top, left top, color-stop(0%, rgba(0,47,75,0.5)), color-stop(100%, rgba(220, 66, 37, 0.5)));
+  background: -webkit-linear-gradient(right, rgba(0,47,75,0.5) 0%, rgba(220, 66, 37, 0.5) 100%);
+  background: -o-linear-gradient(right, rgba(0,47,75,0.5) 0%, rgba(220, 66, 37, 0.5) 100%);
+  background: -ms-linear-gradient(right, rgba(0,47,75,0.5) 0%, rgba(220, 66, 37, 0.5) 100%);
+
+  /* For IE6–9 */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#dc4225', endColorstr='#002f4b', GradientType=1); /* GradientType=1 = horizontal */
+}
+
+
+.img-gradient img{
+  display:block;
+}
  
